# zizek

./: .gitignore  .gitmodules  AGENTS.md  README.md  SECURITY.md  cabal.project  cabal.project.profiling  cabal.project.release  flake.nix  justfile  zizek.cabal
cbits/: wire_enum_guard.c
examples/gallery/: Main.hs
examples/report-tour/: Main.hs
examples/stateful-report-gallery/: Main.hs
examples/tour/: Main.hs
library-native/Hegel/Native/: FFI.hsc
nix/: hegel-core.nix
nix/libhegel/: default.nix  hegel.pc.in
notes/decisions/: profiling-harness.md  report-visual-grammar.md  stateful-reporting.md  stateful-trace-rendering.md
notes/design/: obligation-rendering.md  temporal-properties.md
notes/roadmap/: 00-arcs.md  01-arc2-package-layout.md  01-stateful-trace-rendering.md  02-eval-harness.md  02-stateful-trace-rendering.md
scripts/: profile-space.sh  profile-time-compare.sh  profile-time.sh
test/unit/: Main.hs
tests/conformance/: Common.hs  pyproject.toml  test_conformance.py
tests/conformance/binary/: Main.hs
tests/conformance/booleans/: Main.hs
tests/conformance/char/: Main.hs
tests/conformance/floats/: Main.hs
tests/conformance/frequency/: Main.hs
tests/conformance/integers/: Main.hs
tests/conformance/integers-narrow/: Main.hs
tests/conformance/lib/: ConformanceUtils.hs
tests/conformance/list/: Main.hs
tests/conformance/map/: Main.hs
tests/conformance/one-of/: Main.hs
tests/conformance/origin-deduplication/: Main.hs
tests/conformance/pytest/: conftest.py  local_tests.py  test_conformance.py
tests/conformance/regex/: Main.hs
tests/conformance/sampled-from/: Main.hs
tests/conformance/set/: Main.hs
tests/conformance/stateful/: Main.hs
tests/conformance/text/: Main.hs
tests/demo/stateful-rich/: Main.hs
tests/ffi/: Main.hs  WireEnumCoverage.hs
tests/native/: Main.hs
tests/profile/: Handles.hs  Main.hs  Stress.hs  Warehouse.hs
tests/unit/: BasicProperties.hs  ControlSignals.hs  DatabaseReplay.hs  Finalizers.hs  GeneratorSchemas.hs  Golden.hs  Integrations.hs  KeyedProperties.hs  LedgerRendering.hs  LogRendering.hs  Main.hs  PipelinedRequests.hs  PoolEvents.hs  PropertyChecks.hs  ReportRendering.hs  SessionRecovery.hs  SourceRendering.hs  SpineRendering.hs  StandardGenerators.hs  Stateful.hs  TestBackends.hs  TestRunner.hs  TraceFixtures.hs  TraceIR.hs  TraceModel.hs  UnsupportedCapabilities.hs
