cabal-version: 3.0
name: zizek
version: 0.0.0
synopsis: Hegel Property Tests
description: Property-based testing for Haskell, built on Hypothesis.
author: jkachmar
copyright: 2026 jkachmar
maintainer: j@mercury.com
license: MPL-2.0
license-file: LICENSE
tested-with: ghc ^>=9.10 && ^>=9.12
build-type: Simple

common all
  default-language: GHC2021
  build-depends:
    base ^>=4.20 || ^>=4.21 || ^>=4.22

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeFamilies

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe
    -Wno-unused-packages

common library
  import: all
  build-depends:
    async ^>=2.2,
    base ^>=4.20 || ^>=4.21 || ^>=4.22,
    bytestring ^>=0.12,
    containers ^>=0.7,
    digest ^>=0.0,
    patrol,
    stm ^>=2.5,
    stm-containers ^>=1.2,
    text ^>=2.1,
    typed-process ^>=0.2,
    unliftio ^>=0.2,
    vector ^>=0.13,
    wireform-cbor,

library
  import: library
  hs-source-dirs: library
  -- cabal-gild: discover library
  exposed-modules:
    Hegel
    Hegel.Assertion
    Hegel.Client
    Hegel.Gen
    Hegel.Gen.Binary
    Hegel.Gen.Bool
    Hegel.Gen.Builder
    Hegel.Gen.Float
    Hegel.Gen.Integer
    Hegel.Gen.Internal
    Hegel.Outcome
    Hegel.Phase
    Hegel.Protocol.Cbor
    Hegel.Protocol.Connection
    Hegel.Protocol.Error
    Hegel.Protocol.Packet
    Hegel.Protocol.Stream
    Hegel.Runner
    Hegel.Session
    Hegel.Session.Internal
    Hegel.TestCase

  if os(osx)
    frameworks:
      CoreFoundation
      IOKit
      Security

library conformance-utils
  import: library
  visibility: private
  hs-source-dirs: tests/conformance/lib
  exposed-modules: ConformanceUtils
  build-depends:
    aeson ^>=2.2,
    zizek,

executable test-booleans
  import: library
  hs-source-dirs: tests/conformance/booleans
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-binary
  import: library
  hs-source-dirs: tests/conformance/binary
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-floats
  import: library
  hs-source-dirs: tests/conformance/floats
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-integers
  import: library
  hs-source-dirs: tests/conformance/integers
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-origin-deduplication
  import: library
  hs-source-dirs: tests/conformance/origin-deduplication
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-sampled-from
  import: library
  hs-source-dirs: tests/conformance/sampled-from
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-one-of
  import: library
  hs-source-dirs: tests/conformance/one-of
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

test-suite unit
  import: library
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/unit
  main-is: Main.hs
  -- cabal-gild: discover tests/unit --exclude=tests/unit/Main.hs
  other-modules:
    BasicProperties
    GeneratorSchemas
    PipelinedRequests
    SessionRecovery
    StandardGenerators

  build-depends:
    hspec ^>=2.11,
    tasty ^>=1.5,
    tasty-hspec ^>=1.2,
    zizek,
