cabal-version: 3.0
name: zizek
version: 0.0.0
synopsis: Hegel Property Tests
description: Property-based testing for Haskell, built on Hypothesis.
author: jkachmar
copyright: 2026 jkachmar
maintainer: j@mercury.com
license: MPL-2.0
license-file: LICENSE
tested-with: ghc ^>=9.10 && ^>=9.12
build-type: Simple

common all
  default-language: GHC2021
  build-depends:
    base ^>=4.20 || ^>=4.21 || ^>=4.22

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeFamilies

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-partial-fields
    -Wno-unsafe
    -Wno-unused-packages

common library
  import: all
  build-depends:
    async ^>=2.2,
    base ^>=4.20 || ^>=4.21 || ^>=4.22,
    bytestring ^>=0.12,
    containers ^>=0.7,
    digest ^>=0.0,
    hashable ^>=1.4 || ^>=1.5,
    network-uri ^>=2.6,
    stm ^>=2.5,
    stm-containers ^>=1.2,
    text ^>=2.1,
    typed-process ^>=0.2,
    unliftio ^>=0.2,
    unordered-containers ^>=0.2,
    uuid ^>=1.3,
    vector ^>=0.13,
    wireform-cbor,

library
  import: library
  hs-source-dirs: library
  pkgconfig-depends: hegel
  -- cabal-gild: discover library
  exposed-modules:
    Hegel
    Hegel.Assertion
    Hegel.Collection
    Hegel.Gen
    Hegel.Gen.Binary
    Hegel.Gen.Bool
    Hegel.Gen.Builder
    Hegel.Gen.Char
    Hegel.Gen.Domain
    Hegel.Gen.Float
    Hegel.Gen.HashMap
    Hegel.Gen.HashSet
    Hegel.Gen.IntMap
    Hegel.Gen.IntSet
    Hegel.Gen.Integer
    Hegel.Gen.Internal
    Hegel.Gen.List
    Hegel.Gen.Map
    Hegel.Gen.Regex
    Hegel.Gen.Set
    Hegel.Gen.Text
    Hegel.Gen.Uri
    Hegel.Gen.Uuid
    Hegel.HealthCheck
    Hegel.Native.FFI
    Hegel.Native.Runner
    Hegel.Native.Settings
    Hegel.Native.TestCase
    Hegel.Phase
    Hegel.Protocol.Cbor
    Hegel.Report
    Hegel.Schema
    Hegel.Server.Client
    Hegel.Server.Protocol.Connection
    Hegel.Server.Protocol.Error
    Hegel.Server.Protocol.Packet
    Hegel.Server.Protocol.Stream
    Hegel.Server.Runner
    Hegel.Server.Session
    Hegel.Server.Session.Internal
    Hegel.Server.TestCase
    Hegel.Settings
    Hegel.TestCase

  if os(osx)
    frameworks:
      CoreFoundation
      IOKit
      Security

common conformance
  import: library
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library conformance-utils
  import: library
  visibility: private
  hs-source-dirs: tests/conformance/lib
  exposed-modules: ConformanceUtils
  build-depends:
    aeson ^>=2.2,
    zizek,

executable test-booleans
  import: conformance
  hs-source-dirs: tests/conformance/booleans
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-binary
  import: conformance
  hs-source-dirs: tests/conformance/binary
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-floats
  import: conformance
  hs-source-dirs: tests/conformance/floats
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-integers
  import: conformance
  hs-source-dirs: tests/conformance/integers
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-integers-narrow
  import: conformance
  hs-source-dirs: tests/conformance/integers-narrow
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-frequency
  import: conformance
  hs-source-dirs: tests/conformance/frequency
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-origin-deduplication
  import: conformance
  hs-source-dirs: tests/conformance/origin-deduplication
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-sampled-from
  import: conformance
  hs-source-dirs: tests/conformance/sampled-from
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-one-of
  import: conformance
  hs-source-dirs: tests/conformance/one-of
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-text
  import: conformance
  hs-source-dirs: tests/conformance/text
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-list
  import: conformance
  hs-source-dirs: tests/conformance/list
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-set
  import: conformance
  hs-source-dirs: tests/conformance/set
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    containers ^>=0.7,
    zizek,
    zizek:conformance-utils,

executable test-map
  import: conformance
  hs-source-dirs: tests/conformance/map
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    containers ^>=0.7,
    zizek,
    zizek:conformance-utils,

executable test-char
  import: conformance
  hs-source-dirs: tests/conformance/char
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-regex
  import: conformance
  hs-source-dirs: tests/conformance/regex
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

test-suite unit
  import: library
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/unit
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  -- cabal-gild: discover tests/unit --exclude=tests/unit/Main.hs
  other-modules:
    BasicProperties
    GeneratorSchemas
    PipelinedRequests
    SessionRecovery
    StandardGenerators
    TestBackends
    TestRunner
    UnsupportedCapabilities

  build-depends:
    hspec ^>=2.11,
    tasty ^>=1.5,
    tasty-hspec ^>=1.2,
    zizek,

test-suite native
  import: library
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/native
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    hspec ^>=2.11,
    tasty ^>=1.5,
    tasty-hspec ^>=1.2,
    zizek,
