cabal-version: 3.0
name: zizek
version: 0.0.0
synopsis: Hegel Property Tests
description: Property-based testing for Haskell, built on Hypothesis.
author: jkachmar
copyright: 2026 jkachmar
maintainer: j@mercury.com
license: MPL-2.0
license-file: LICENSE
tested-with: ghc ^>=9.10 && ^>=9.12
build-type: Simple
extra-source-files: licenses/hedgehog.LICENSE

common all
  default-language: GHC2021
  build-depends:
    base ^>=4.20 || ^>=4.21 || ^>=4.22

  default-extensions:
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ScopedTypeVariables
    StrictData
    TypeFamilies

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-partial-fields
    -Wno-unsafe
    -Wno-unused-packages

common library
  import: all
  build-depends:
    async ^>=2.2,
    base ^>=4.20 || ^>=4.21 || ^>=4.22,
    bytestring ^>=0.12,
    containers ^>=0.7,
    data-default-class ^>=0.2,
    digest ^>=0.0,
    hashable ^>=1.4 || ^>=1.5,
    hspec-core ^>=2.11.10,
    network-uri ^>=2.6,
    pretty-show ^>=1.10,
    prettyprinter ^>=1.7,
    prettyprinter-ansi-terminal ^>=1.1,
    tasty ^>=1.5,
    text ^>=2.1,
    transformers ^>=0.6,
    unliftio ^>=0.2,
    unordered-containers ^>=0.2,
    uuid ^>=1.3,
    vector ^>=0.13,
    wireform-cbor,
    witch ^>=1.2,

library
  import: library
  hs-source-dirs: library
  pkgconfig-depends: hegel
  -- cabal-gild: discover library
  exposed-modules:
    Hegel
    Hegel.Assertion
    Hegel.Backend
    Hegel.Collection
    Hegel.Database
    Hegel.Diff
    Hegel.Gen
    Hegel.Gen.Binary
    Hegel.Gen.Bool
    Hegel.Gen.Builder
    Hegel.Gen.Char
    Hegel.Gen.Domain
    Hegel.Gen.Float
    Hegel.Gen.HashMap
    Hegel.Gen.HashSet
    Hegel.Gen.IntMap
    Hegel.Gen.IntSet
    Hegel.Gen.Integer
    Hegel.Gen.Internal
    Hegel.Gen.List
    Hegel.Gen.Map
    Hegel.Gen.Regex
    Hegel.Gen.Set
    Hegel.Gen.Text
    Hegel.Gen.Uri
    Hegel.Gen.Uuid
    Hegel.HealthCheck
    Hegel.Hspec
    Hegel.Internal.CBOR
    Hegel.Internal.CString
    Hegel.Internal.Control
    Hegel.Internal.DataSource
    Hegel.Internal.DatabaseKey
    Hegel.Internal.Event
    Hegel.Internal.FFI
    Hegel.Internal.Schema
    Hegel.Internal.TestCase
    Hegel.Phase
    Hegel.Pool
    Hegel.Property
    Hegel.Property.Internal
    Hegel.Report
    Hegel.Report.Ann
    Hegel.Report.Blame
    Hegel.Report.Discovery
    Hegel.Report.Glyph
    Hegel.Report.Journal
    Hegel.Report.Ledger
    Hegel.Report.Note
    Hegel.Report.Phrase
    Hegel.Report.Source
    Hegel.Report.Span
    Hegel.Report.Stateful
    Hegel.Report.Style
    Hegel.Report.Trace
    Hegel.Report.Verdict
    Hegel.Runner
    Hegel.Settings
    Hegel.Stateful
    Hegel.Tasty
    Hegel.Verbosity

  if os(osx)
    frameworks:
      CoreFoundation
      IOKit
      Security

common conformance
  import: library
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library conformance-utils
  import: library
  visibility: private
  hs-source-dirs: tests/conformance/lib
  exposed-modules: ConformanceUtils
  build-depends:
    aeson ^>=2.2,
    zizek,

executable test-booleans
  import: conformance
  hs-source-dirs: tests/conformance/booleans
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-binary
  import: conformance
  hs-source-dirs: tests/conformance/binary
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-floats
  import: conformance
  hs-source-dirs: tests/conformance/floats
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-integers
  import: conformance
  hs-source-dirs: tests/conformance/integers
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-integers-narrow
  import: conformance
  hs-source-dirs: tests/conformance/integers-narrow
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-frequency
  import: conformance
  hs-source-dirs: tests/conformance/frequency
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-origin-deduplication
  import: conformance
  hs-source-dirs: tests/conformance/origin-deduplication
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-sampled-from
  import: conformance
  hs-source-dirs: tests/conformance/sampled-from
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-one-of
  import: conformance
  hs-source-dirs: tests/conformance/one-of
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-text
  import: conformance
  hs-source-dirs: tests/conformance/text
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-list
  import: conformance
  hs-source-dirs: tests/conformance/list
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-set
  import: conformance
  hs-source-dirs: tests/conformance/set
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    containers ^>=0.7,
    zizek,
    zizek:conformance-utils,

executable test-map
  import: conformance
  hs-source-dirs: tests/conformance/map
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    containers ^>=0.7,
    zizek,
    zizek:conformance-utils,

executable test-char
  import: conformance
  hs-source-dirs: tests/conformance/char
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-regex
  import: conformance
  hs-source-dirs: tests/conformance/regex
  main-is: Main.hs
  build-depends:
    aeson ^>=2.2,
    zizek,
    zizek:conformance-utils,

executable test-stateful
  import: conformance
  hs-source-dirs: tests/conformance/stateful
  main-is: Main.hs
  build-depends:
    zizek

-- Gallery of deliberately-failing stateful machines, each stressing one
-- rendering decision of the rich report renderer; for manual eyeballing.
-- Not run by CI; `just gallery` from the repo root.
executable gallery
  import: conformance
  hs-source-dirs: examples/gallery
  main-is: Main.hs
  build-depends:
    containers ^>=0.7,
    zizek,

-- A guided tour of the failure report's progression, from a plain spliced
-- property to the full composed trace report; for manual eyeballing.
-- Not run by CI; `just tour` from the repo root.
executable tour
  import: conformance
  hs-source-dirs: examples/tour
  main-is: Main.hs
  build-depends:
    containers ^>=0.7,
    unliftio ^>=0.2,
    zizek,

-- Profiling scenarios: deterministic, named workloads isolating the
-- Haskell-side hot paths (see notes/decisions/profiling-harness.md).
-- `cabal run profile-hegel -- --list` for the scenario list; driven by
-- `just profile-run` / `just profile-space` / `just profile-time`.
executable profile-hegel
  import: conformance
  -- -N1 (overriding conformance's -N): the scenarios are single-threaded, and
  -- parallel GC would only add nondeterministic noise to profiles & timings.
  ghc-options: -with-rtsopts=-N1
  hs-source-dirs: tests/profile
  main-is: Main.hs
  other-modules:
    Handles
    Stress
    Warehouse

  build-depends:
    containers ^>=0.7,
    zizek,

test-suite unit
  import: library
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/unit
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  -- cabal-gild: discover tests/unit --exclude=tests/unit/Main.hs
  other-modules:
    BasicProperties
    ControlSignals
    DatabaseReplay
    GeneratorSchemas
    Integrations
    KeyedProperties
    LedgerRendering
    PoolEvents
    PropertyChecks
    ReportRendering
    SourceRendering
    StandardGenerators
    Stateful
    TraceFixtures
    TraceIR

  build-depends:
    hspec ^>=2.11,
    tasty-hspec ^>=1.2,
    zizek,

test-suite ffi
  import: library
  type: exitcode-stdio-1.0
  hs-source-dirs: tests/ffi
  main-is: Main.hs
  pkgconfig-depends: hegel
  -- Closed-world guard: fails to build if libhegel adds an enum variant.
  c-sources: cbits/wire_enum_guard.c
  cc-options: -Werror=switch-enum
  other-modules: WireEnumCoverage
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    hspec ^>=2.11,
    tasty-hspec ^>=1.2,
    witch ^>=1.2,
    zizek,
